# public-transit-client

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: poetry-publish.yml
public_transit_client/: client.py  model.py
tests/integration/: test_integration_routing.py  test_integration_schedule.py
tests/unit/: test_client.py
